🔧fix: categorybutton align

--- a/src/components/CategoryButtons/index.css
+++ b/src/components/CategoryButtons/index.css
@@ -1,6 +1,6 @@
 .category-buttons{
     display: flex;
-    gap: 3%;
+    justify-content: space-between;
 }
 .category-btn {
     display: flex;
